@@ -6,6 +6,7 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- #2139: automatically specify correct charset in <meta> tags
 - #2135: Fully specified URI rewriting is too specific
 - #2137: Accept any extension for theme pages
 New internal features
